--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #178a37;
+    background-color: #96a49a;
     margin: 0;
     padding: 0;
 }
